--- a/benchmarks/data_processing/dask_on_ray/single-node.yaml
+++ b/benchmarks/data_processing/dask_on_ray/single-node.yaml
@@ -40,11 +40,11 @@ idle_timeout_minutes: 5
 # Cloud-provider specific configuration.
 provider:
     type: aws
-    region: us-west-2
+    region: us-east-2
     # Availability zone(s), comma-separated, that nodes may be launched in.
     # Nodes are currently spread between zones by a round-robin approach,
     # however this implementation detail should not be relied upon.
-    availability_zone: us-west-2a,us-west-2b
+    availability_zone: us-east-2a
     # Whether to allow node reuse. If set to False, nodes will be terminated
     # instead of stopped.
     cache_stopped_nodes: True # If not present, the default is True.
@@ -63,7 +63,7 @@ auth:
 # http://boto3.readthedocs.io/en/latest/reference/services/ec2.html#EC2.ServiceResource.create_instances
 head_node:
     InstanceType: i3.8xlarge
-    ImageId: ami-0a2363a9cff180a64 # Deep Learning AMI (Ubuntu) Version 30
+    ImageId: ami-0edc3c56e8af8d35a # Deep Learning AMI (Ubuntu) Version 30
 
     # You can provision additional disk space with a conf as follows
     BlockDeviceMappings:
@@ -78,8 +78,8 @@ head_node:
 # For more documentation on available fields, see:
 # http://boto3.readthedocs.io/en/latest/reference/services/ec2.html#EC2.ServiceResource.create_instances
 worker_nodes:
-    InstanceType: m5.large
-    ImageId: ami-0a2363a9cff180a64 # Deep Learning AMI (Ubuntu) Version 30
+    InstanceType: i3.8xlarge
+    ImageId: ami-0edc3c56e8af8d35a # Deep Learning AMI (Ubuntu) Version 30
 
     # Run workers on spot by default. Comment this out to use on-demand.
     InstanceMarketOptions:
@@ -127,6 +127,7 @@ initialization_commands: []
 setup_commands:
     - echo 'export PATH="$HOME/anaconda3/envs/tensorflow_p36/bin:$PATH"' >> ~/.bashrc
     #- pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-2.0.0.dev0-cp36-cp36m-manylinux2014_x86_64.whl
+    - pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/master/fe8a500e98a2ab8cb8c28a832207d6b5b12e1b9f/ray-2.0.0.dev0-cp37-cp37m-manylinux2014_x86_64.whl
     - pip install -U dask==2.18.0 distributed==2.18.0
     - source activate tensorflow_p36 && if [[ -z $(pip freeze | grep fastparquet) ]]; then conda install -y -c conda-forge fastparquet; fi 
     # Note: if you're developing Ray, you probably want to create a Docker image that
