--- a/benchmarks/data_processing/dask_on_ray/single-node.yaml
+++ b/benchmarks/data_processing/dask_on_ray/single-node.yaml
@@ -125,11 +125,20 @@ initialization_commands: []
 
 # List of shell commands to run to set up nodes.
 setup_commands:
-    - echo 'export PATH="$HOME/anaconda3/envs/tensorflow_p36/bin:$PATH"' >> ~/.bashrc
+    # - echo 'export PATH="$HOME/anaconda3/envs/tensorflow_p36/bin:$PATH"' >> ~/.bashrc
+    - sudo apt-get install -y google-perftools libgoogle-perftools-dev
     #- pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-2.0.0.dev0-cp36-cp36m-manylinux2014_x86_64.whl
-    - pip install -U --user https://s3-us-west-2.amazonaws.com/ray-wheels/master/566dcea56aedf0d920f94410faaff58d66c50370/ray-2.0.0.dev0-cp37-cp37m-manylinux2014_x86_64.whl
-    - pip install -U --user dask==2.18.0 distributed==2.18.0 fastparquet
-    - mkdir -p /tmp/ray/parquet-data
+    # - pip install -U --user https://s3-us-west-2.amazonaws.com/ray-wheels/master/566dcea56aedf0d920f94410faaff58d66c50370/ray-2.0.0.dev0-cp37-cp37m-manylinux2014_x86_64.whl
+    - pip install -U --user https://s3-us-west-2.amazonaws.com/ray-wheels/core/feat/resource-report-lag-warning/4996a78577b647925af6b0d7c858cca1bf7250e1/ray-2.0.0.dev0-cp37-cp37m-manylinux2014_x86_64.whl
+    - pip install -U --user dask==2021.01.0 distributed==2021.01.0 fastparquet
+    - if ! sudo mountpoint -q /mnt/disk0; then sudo mkfs -t ext4 /dev/nvme0n1 && sudo mkdir -p /mnt/disk0 && sudo mount /dev/nvme0n1 /mnt/disk0 && sudo chown -R ubuntu:ubuntu /mnt/disk0 && sudo chmod 777 /mnt/disk0; fi
+    - if ! sudo mountpoint -q /mnt/disk1; then sudo mkfs -t ext4 /dev/nvme1n1 && sudo mkdir -p /mnt/disk1 && sudo mount /dev/nvme1n1 /mnt/disk1 && sudo chown -R ubuntu:ubuntu /mnt/disk1 && sudo chmod 777 /mnt/disk1; fi
+    - if ! sudo mountpoint -q /mnt/disk2; then sudo mkfs -t ext4 /dev/nvme2n1 && sudo mkdir -p /mnt/disk2 && sudo mount /dev/nvme2n1 /mnt/disk2 && sudo chown -R ubuntu:ubuntu /mnt/disk2 && sudo chmod 777 /mnt/disk2; fi
+    - if ! sudo mountpoint -q /mnt/disk3; then sudo mkfs -t ext4 /dev/nvme3n1 && sudo mkdir -p /mnt/disk3 && sudo mount /dev/nvme3n1 /mnt/disk3 && sudo chown -R ubuntu:ubuntu /mnt/disk3 && sudo chmod 777 /mnt/disk3; fi
+    - mkdir -p /mnt/disk0/benchmark_scratch && rm -f /mnt/disk0/benchmark_scratch/*.parquet
+    - mkdir -p /mnt/disk1/benchmark_scratch && rm -f /mnt/disk1/benchmark_scratch/*.parquet
+    - mkdir -p /mnt/disk2/benchmark_scratch && rm -f /mnt/disk2/benchmark_scratch/*.parquet
+    - mkdir -p /mnt/disk3/benchmark_scratch && rm -f /mnt/disk3/benchmark_scratch/*.parquet
     # Note: if you're developing Ray, you probably want to create a Docker image that
     # has your Ray repo pre-cloned. Then, you can replace the pip installs
     # below with a git checkout <your_sha> (and possibly a recompile).
@@ -146,11 +155,12 @@ worker_setup_commands: []
 head_start_ray_commands:
     - ray stop
     - pkill -9 dask || true
-    - ulimit -n 65536; ray start --head --port=6379 --object-manager-port=8076 --autoscaling-config=~/ray_bootstrap_config.yaml
+    # - ulimit -n 65536; RAY_BACKEND_LOG_LEVEL=debug ray start --head --port=6379 --object-manager-port=8076 --autoscaling-config=~/ray_bootstrap_config.yaml --system-config='{"max_io_workers":4,"object_spilling_config":"{\"type\":\"filesystem\",\"params\":{\"directory_path\":[\"/mnt/disk0/benchmark_scratch\",\"/mnt/disk1/benchmark_scratch\",\"/mnt/disk2/benchmark_scratch\",\"/mnt/disk3/benchmark_scratch\"]}}"}'
+    - ulimit -n 65536; RAY_BACKEND_LOG_LEVEL=debug RAY_RAYLET_PERFTOOLS_PROFILER=1 PERFTOOLS_PATH=/usr/lib/x86_64-linux-gnu/libprofiler.so PERFTOOLS_LOGFILE=/tmp/ray/session_latest/pprof.out ray start --head --port=6379 --object-manager-port=8076 --autoscaling-config=~/ray_bootstrap_config.yaml --system-config='{"max_io_workers":1,"object_spilling_config":"{\"type\":\"filesystem\",\"params\":{\"directory_path\":[\"/mnt/disk0/benchmark_scratch\"]}}"}'
       #- dask-scheduler & sleep 5
       #- dask-worker --nprocs 32 & sleep 5
 
 # Command to start ray on worker nodes. You don't need to change this.
 worker_start_ray_commands:
     - ray stop
-    - ulimit -n 65536; ray start --address=$RAY_HEAD_IP:6379 --object-manager-port=8076
+    - ulimit -n 65536; RAY_BACKEND_LOG_LEVEL=debug RAY_RAYLET_PERFTOOLS_PROFILER=1 PERFTOOLS_PATH=/usr/lib/x86_64-linux-gnu/libprofiler.so PERFTOOLS_LOGFILE=/tmp/ray/session_latest/pprof.out ray start --address=$RAY_HEAD_IP:6379 --object-manager-port=8076
