--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -835,6 +835,7 @@ cc_library(
         ":stats_lib",
         ":worker_rpc",
         "//src/ray/protobuf:worker_cc_proto",
+        "@arrow",
         "@boost//:circular_buffer",
         "@boost//:fiber",
         "@com_google_absl//absl/container:btree",
